--- a/moddownloader/Makefile
+++ b/moddownloader/Makefile
@@ -19,7 +19,7 @@ test:
 	$(GOTEST) -v -cover ./...
 
 test-integration:
-	$(GOTEST) -v -tags=integration ./...
+	bash -c "source ../.env && $(GOTEST) -v -tags=integration ./..."
 
 deps:
 	$(GOGET) -d -v ./...
