--- a/webapp/Makefile
+++ b/webapp/Makefile
@@ -37,6 +37,9 @@ install: build
 	install -d $(INSTALL_DIR)/data/backups
 	@echo "Installing systemd service file..."
 	install -m 644 factorio-webapp.service $(SERVICE_FILE)
+	@echo "Setting ownership and permissions..."
+	chown -R factorio:factorio $(INSTALL_DIR)
+	chmod 750 $(INSTALL_DIR)
 	@echo "Installation complete!"
 	@echo "Run: sudo systemctl daemon-reload"
 	@echo "Run: sudo systemctl enable --now factorio-webapp"
@@ -52,4 +55,53 @@ deploy: build
 run: build
 	./$(BINARY_NAME)
 
-.PHONY: build clean test deploy deps run install
+## Setup nginx with basic authentication
+nginx-setup:
+	@echo "Setting up nginx configuration for Factorio Webapp..."
+	@echo ""
+	@echo "This will configure nginx as a reverse proxy with basic authentication."
+	@echo "You will be prompted for a username and password."
+	@echo ""
+	@read -p "Enter username for webapp access: " username; \
+	if [ -z "$$username" ]; then \
+		echo "Error: Username cannot be empty"; \
+		exit 1; \
+	fi; \
+	stty -echo; \
+	read -p "Enter password for webapp access: " password; \
+	stty echo; \
+	echo ""; \
+	if [ -z "$$password" ]; then \
+		echo "Error: Password cannot be empty"; \
+		exit 1; \
+	fi; \
+	echo ""; \
+	echo "Installing nginx configuration..."; \
+	install -d /etc/nginx/conf.d; \
+	install -m 644 nginx.conf.template /etc/nginx/conf.d/factorio.conf; \
+	echo "Creating htpasswd file..."; \
+	which htpasswd >/dev/null 2>&1 || { \
+		echo "Error: htpasswd not found. Please install apache2-utils (Debian/Ubuntu) or httpd-tools (RHEL/CentOS)"; \
+		exit 1; \
+	}; \
+	htpasswd -cb /etc/nginx/.htpasswd-factorio "$$username" "$$password"; \
+	chmod 640 /etc/nginx/.htpasswd-factorio; \
+	echo ""; \
+	echo "Testing nginx configuration..."; \
+	nginx -t 2>/dev/null || { \
+		echo "Error: nginx configuration test failed"; \
+		exit 1; \
+	}; \
+	echo "Reloading nginx..."; \
+	systemctl reload nginx || systemctl restart nginx; \
+	echo ""; \
+	echo "============================================"; \
+	echo "nginx setup complete!"; \
+	echo "============================================"; \
+	echo ""; \
+	echo "Access the webapp at: http://your-server/"; \
+	echo "Username: $$username"; \
+	echo ""; \
+	echo "To remove this configuration later, run: sudo rm /etc/nginx/conf.d/factorio.conf /etc/nginx/.htpasswd-factorio && sudo systemctl reload nginx"
+
+.PHONY: build clean test deploy deps run install nginx-setup
